app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: app
  name: app
  namespace: etherpad
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: app
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
